# machineloling_live

./: .editorconfig  .gitignore  README.md  _tmp_champs.json  _tmp_index.json  bucket-policy.json  build.sh  build_pages.sh  cloudflare-build.sh  cors.json  pyproject.toml  tmp_diamond.json  tmp_emerald.json  tmp_master_plus.json  wrangler.jsonc
.github/workflows/: deploy.yml  refresh.yml
_reference_backend/: comparer.py  compute.py  data.py  live_curves.py  main.py  ports.py  precompute_pool_distributions.py  sweep_sample_size.py
data_prep/: README.md  aggregate_matches.py  incremental.py  irt.py  pack_champions.py  pack_matrices.py  precompute_curves.py  refresh.py  refresh_config.py  requirements.txt  s3_io.py  shrinkage.py
docs/: RAW_DATA_SPEC.md
engine/: Cargo.toml
engine/src/: curves.rs  data.rs  lib.rs  ports.rs
engine/src/endpoints/: bans.rs  blind.rs  comparer.rs  compute.rs  health.rs  mod.rs  pool.rs  redundancy.rs
engine/src/util/: consts.rs  defaults.rs  math.rs  mod.rs
frontend/: index.html  riot.txt  style.css  wasm_smoke.html
frontend/src/: api.js  bus.js  main.js  state.js  utils.js
frontend/src/views/: bans.js  blind.js  builder.js  comparer.js  coverage.js  health.js  meta.js  replacements.js
frontend/src/widgets/: heatmap.js  multiselect.js  strength.js
scripts/: check_imports.mjs  check_undefs.mjs  fixup_meta.ps1  split_frontend.ps1
