# Repo-wide Python tooling. Currently only `data_prep/` is in scope.
# The Riot API scraper lives in a separate repo:
# https://github.com/machineloling-hub/riot-api-pull-pipeline

# Minimal project metadata so CI environments (e.g. Cloudflare Pages) that
# auto-detect pyproject.toml and run `pip install .` don't trip setuptools'
# flat-layout auto-discovery on engine/, frontend/, data_prep/. We ship no
# Python package from this repo; data_prep/ is run as scripts.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "machineloling-live"
version = "0.0.0"
description = "Tooling shell for the machineloling live site; ships no Python package."
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = []
exclude = ["*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "_reference_backend",
    "**/__pycache__",
    "dist",
    "deploy",
    "engine/target",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line length — handled by formatter when used
    "B008",   # function call in default arg (common in scientific code)
]

[tool.ruff.lint.isort]
known-first-party = ["data_prep"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
